bak/app_sdk_bak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-sdk-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: sdk.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-sdk
          servicePort: 8080
